--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 
     compile group: 'org.apache.flink', name: 'flink-table-api-scala-bridge_2.12', version: '1.9.1'
     compile group: 'org.apache.flink', name: 'flink-table-api-scala_2.12', version: '1.9.1'
+    compile group: 'org.apache.flink', name: 'flink-table-planner_2.12', version: '1.9.1'
 
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
