--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'com.typesafe.scala-logging', name: 'scala-logging_2.12', version: '3.9.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
