--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootLogger=INFO, console
 # set the log level for these components
-log4j.logger.org=ERROR
+log4j.logger.org=INFO
 log4j.logger.io.netty=ERROR
 log4j.logger.org.apache.zookeeper=ERROR
 # add a ConsoleAppender to the logger stdout to write to the console
